sfdx-source/LabsActionPlans/main/default/objects/APTask__c/APTask__c.object-meta.xml
<CustomObject>
    <description>Action Plan Task - belongs to Action Plan</description>
    <label>ActionPlan Task</label>
    <nameField>
        <label>ActionPlan Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ActionPlan Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>