sfdx-source/LabsActionPlans/main/default/objects/APTask__c/fields/ActivityDate__c.field-meta.xml
<CustomField>
	<fullName>ActivityDate__c</fullName>
	<description>The Due Date for this AP Task - will be copied to the Task Due Date</description>
	<label>Due Date</label>
	<type>Date</type>
</CustomField>