sfdx-source/LabsActionPlans/main/default/objects/APTask__c/fields/Comments__c.field-meta.xml
<CustomField>
	<fullName>Comments__c</fullName>
	<label>Comments</label>
	<description>Text to be copied to Task Description</description>
	<length>32000</length>
	<type>LongTextArea</type>
</CustomField>