sfdx-source/LabsActionPlans/main/default/objects/APTask__c/fields/Controller__c.field-meta.xml
<CustomField>
	<fullName>Controller__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>Controlling Task</label>
	<referenceTo>APTask__c</referenceTo>
	<relationshipLabel>Dependent AP Tasks</relationshipLabel>
	<relationshipName>Dependent_AP_Tasks</relationshipName>
	<type>Lookup</type>
</CustomField>