sfdx-source/LabsActionPlans/main/default/objects/APTask__c/fields/IsClosed__c.field-meta.xml
<CustomField>
	<fullName>IsClosed__c</fullName>
	<defaultValue>false</defaultValue>
	<description>Set via trigger. Used in VIsualforce ActionPlanDetail page logic</description>
	<inlineHelpText>True if the task status is one of the closed statuses in this org</inlineHelpText>
	<label>Closed</label>
	<type>Checkbox</type>
</CustomField>