sfdx-source/LabsActionPlans/main/default/objects/APTask__c/fields/SendEmail__c.field-meta.xml
<CustomField>
    <fullName>SendEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send Email Notification of Task creation.</description>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>