sfdx-source/LabsActionPlans/main/default/objects/APTask__c/fields/Status__c.field-meta.xml
<CustomField>
	<fullName>Status__c</fullName>
	<description>Initial Task Status. Depends on Record Type, so is unrestricted picklist.</description>
	<label>Status</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>Not Started</fullName>
				
				<label>Not Started</label>
			</value>
			<value>
				<fullName>In Progress</fullName>
				
				<label>In Progress</label>
			</value>
			<value>
				<fullName>Waiting on someone else</fullName>
				
				<label>Waiting on someone else</label>
			</value>
			<value>
				<fullName>Deferred</fullName>
				
				<label>Deferred</label>
			</value>
			<value>
				<fullName>Completed</fullName>
				
				<label>Completed</label>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>