sfdx-source/LabsActionPlans/main/default/objects/APTask__c/fields/Type__c.field-meta.xml
<CustomField>
	<fullName>Type__c</fullName>
	<label>Type</label>
	<description>Task Type</description>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>Call</fullName>
			</value>
			<value>
				<fullName>Email</fullName>
			</value>
			<value>
				<fullName>Mail</fullName>
			</value>
			<value>
				<fullName>Meeting</fullName>
			</value>
			<value>
				<fullName>Misc</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>