sfdx-source/LabsActionPlans/main/default/objects/APTask__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this field is not required, leaving it blank will assign the task to the related record owner.</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>APTasks</relationshipName>
    <type>Lookup</type>
</CustomField>