sfdx-source/LabsActionPlans/main/default/objects/APTask__c/validationRules/DaysNotBlankNotNegative.validationRule-meta.xml
<ValidationRule>
    <fullName>DaysNotBlankNotNegative</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(DaysFromStart__c) || DaysFromStart__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>DaysFromStart__c</errorDisplayField>
    <errorMessage>You must enter a non-negative value</errorMessage>
</ValidationRule>