sfdx-source/LabsActionPlans/main/default/objects/APTask__c/validationRules/Minutes_must_be_an_integer.validationRule-meta.xml
<ValidationRule>
    <fullName>Minutes_must_be_an_integer</fullName>
    <active>true</active>
    <errorConditionFormula>(!ISNUMBER( Minutes_Reminder__c ) ||  CONTAINS(Minutes_Reminder__c, &quot;.&quot;)) &amp;&amp; !ISBLANK(Minutes_Reminder__c)</errorConditionFormula>
    <errorMessage>Minutes Reminder must be a whole number</errorMessage>
</ValidationRule>